# rust_SmartHome

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: client.rs  server.rs
lib/handlers/: Cargo.toml
lib/handlers/src/: device.rs  home.rs  lib.rs  room.rs
lib/ia_devices/: Cargo.toml
lib/ia_devices/src/: device.rs  lib.rs  soket.rs  weather.rs  window.rs
lib/ia_devices/src/devices/: device.rs  mod.rs  soket.rs  weather.rs  window.rs
lib/ia_home/: Cargo.toml
lib/ia_home/src/: home.rs  homeerrors.rs  room.rs
lib/ia_home/src/home/: home.rs  mod.rs  room.rs
src/: main.rs
