[package]
name = "actix_smarthome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = "4"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
ia_devices  = {path = "lib/ia_devices"}
ia_home     = {path = "lib/ia_home"}
handlers    = {path = "lib/handlers"}

[dev-dependencies]
hyper       = {version = "*", features = ["full"]}
tokio = { version = "*", features = ["full"] }